signup activity updated with password policy

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -28,7 +28,7 @@
                 android:layout_margin="8dp"
                 android:background="@drawable/button_border"
                 android:backgroundTint="@android:color/holo_blue_light"
-                android:text="Main Page"
+                android:text="Home"
                 android:textColor="#000000" />
 
             <!-- Add Meal Button -->
@@ -142,7 +142,7 @@
         <FrameLayout
             android:id="@+id/chartContainer"
             android:layout_width="match_parent"
-            android:layout_height="500dp"
+            android:layout_height="400dp"
             android:layout_weight="1" />
 
     </LinearLayout>
