working fine ok date 05/01/2025

--- a/app/src/main/res/layout/activity_name.xml
+++ b/app/src/main/res/layout/activity_name.xml
@@ -13,10 +13,10 @@
         android:inputType="text" />
 
     <EditText
-        android:id="@+id/userNameText"
+        android:id="@+id/remarkEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="User Name"
+        android:hint="Remark"
         android:inputType="text" />
     <Button
         android:id="@+id/submitButton"
