--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -132,7 +132,7 @@
                 android:layout_margin="8dp"
                 android:background="@drawable/button_border"
                 android:backgroundTint="@android:color/darker_gray"
-                android:text="Placeholder"
+                android:text="Name"
                 android:textSize="10sp"
                 android:textColor="#FFFFFF" />
 
