--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,7 +51,8 @@
             android:layout_marginBottom="16dp"
             android:autofillHints=""
             android:hint="@string/expenditure_details"
-            android:inputType="text" />
+            android:inputType="text"
+            android:background="@drawable/edit_text_background" />
 
         <!-- Price Input -->
         <EditText
@@ -63,7 +64,8 @@
             android:hint="@string/price"
             android:imeOptions="actionDone"
             android:inputType="numberDecimal"
-            android:maxLines="1" />
+            android:maxLines="1"
+            android:background="@drawable/edit_text_background"/>
 
         <!-- Meal Dropdown (Spinner) -->
         <Spinner
