--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,6 +18,19 @@
         <item name="android:paddingRight">16dp</item>
     </style>
 
+    <style name="CustomSpinnerStyle">
+        <item name="android:background">?android:attr/colorBackground</item>
+        <item name="android:textColor">#000000</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <!-- Custom dropdown list style -->
+    <style name="CustomSpinnerDropdown">
+        <item name="android:background">#ffffff</item>
+        <item name="android:textColor">#333333</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
     <!-- EditText Style -->
     <style name="CustomEditText">
         <item name="android:background">@drawable/edittext_background</item>
