chart view has been updated

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="16dp">
 
@@ -132,9 +132,9 @@
                 android:layout_margin="8dp"
                 android:background="@drawable/button_border"
                 android:backgroundTint="@android:color/darker_gray"
-                android:text="Name"
+                android:text="Add Member"
                 android:textSize="10sp"
-                android:textColor="#FFFFFF" />
+                android:textColor="@color/black" />
 
         </GridLayout>
 
