--- a/app/src/main/res/layout/activity_add_meal.xml
+++ b/app/src/main/res/layout/activity_add_meal.xml
@@ -54,5 +54,13 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:text="Reset" />
+    <Button
+        android:id="@+id/viewMealsButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="View Meals"
+        android:layout_marginTop="16dp"
+        android:layout_gravity="center" />
+
 
 </LinearLayout>
