Meal is updated but table view is not organised

--- a/app/src/main/res/layout/item_meal.xml
+++ b/app/src/main/res/layout/item_meal.xml
@@ -1,33 +1,37 @@
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:padding="8dp"
-    android:background="?android:attr/selectableItemBackground"
-    android:layout_marginBottom="8dp">
+    android:layout_marginBottom="15dp"
+
+    android:background="@drawable/item_border"
+    android:orientation="horizontal"
+    android:padding="8dp">
+
 
     <TextView
         android:id="@+id/nameTextView"
-        android:layout_width="wrap_content"
+        android:layout_width="80dp"
         android:layout_height="wrap_content"
-        android:textSize="16sp"
+        android:background="@drawable/item_border"
+        android:text="Name"
         android:textColor="#000000"
-        android:text="Name" />
+        android:textSize="16sp" />
 
     <TextView
         android:id="@+id/mealTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="14sp"
+        android:background="@drawable/item_border"
+        android:text="Meal"
         android:textColor="#666666"
-        android:text="Meal" />
+        android:textSize="14sp" />
 
     <TextView
         android:id="@+id/dateTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="14sp"
+        android:background="@drawable/item_border"
+        android:text="Date"
         android:textColor="#999999"
-        android:text="Date" />
+        android:textSize="14sp" />
 </LinearLayout>
